<resources>
    <string name="app_name">Food Diary</string>
    <string name="diary">Diary</string>
    <string name="account">Account</string>
    <string name="search">Search</string>
    <string name="calendar">Calendar</string>
    <string name="ok" translatable="false">OK</string>
    <string name="carbs">Carbs</string>
    <string name="proteins">Proteins</string>
    <string name="fats">Fats</string>
    <string name="breakfast">Breakfast</string>
    <string name="recents">Recents</string>
    <string name="favourite">Favourites</string>
    <string name="add">add</string>
    <string name="cancel">Cancel</string>
    <string name="modifyQuantity">Modify Quantity (g)</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="snacks">Snacks</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="yesterday">Yesterday</string>
    <string name="prev"><![CDATA[< prev]]></string>
    <string name="next"><![CDATA[next >]]></string>
    <string name="change_image">Change Image</string>
    <string name="welcome">"Welcome!"</string>
    <string name="name">Name</string>
    <string name="insert_personal_data">Insert following data to estimate your daily calories intake</string>
    <string name="surname">Surname</string>
    <string name="height_cm">Height (cm)</string>
    <string name="weight_kg">Weight (Kg)</string>
    <string name="activity_level">Daily activity level</string>
    <string name="high">High</string>
    <string name="mid">Mid</string>
    <string name="low">Low</string>
    <string name="error">Error</string>
    <string name="gender_error">Select your gender!</string>
    <string name="birth_error">Insert a date of birth!</string>
    <string name="activity_error">Select your activity level!</string>
    <string name="add_personal">Add your food</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="age">Age (years)</string>
    <string name="gender">Gender</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="nothing_to_show">Nothing to show...</string>
    <string name="not_found">not found</string>
    <string name="searched">searched</string>
    <string name="adding">Adding...</string>
    <string name="added">Added</string>
    <string name="removed">Removed</string>
    <string name="removing">Removing...</string>
    <string name="remained">remained</string>
    <string name="consumed">consumed</string>
    <string name="calories">Calories</string>
    <string name="quantity">Quantity (g)</string>
    <string name="meal">Meal</string>
    <string name="deleted">deleted</string>
    <string name="confirm">confirm</string>
    <string name="select_date">Select Date</string>
    <string name="editAccount">Edit Account</string>
    <string name="carbs_percent">Carbs (%)</string>
    <string name="pro_percent">Pro (%)</string>
    <string name="fats_percent">Fats (%)</string>
    <string name="name_not_valid">Name not valid!</string>
    <string name="food_present">Food with same name already present in that meal</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sing_in">Sing Up</string>
    <string name="mail_not_valid">Mail not valid!</string>
    <string name="password_not_valid">Password not valid!</string>
    <string name="logout">logout</string>
</resources>
