<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.login.LoginPersonalDataFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/titleCardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/primaryLightColor"
                    android:padding="8dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView2"
                        style="@style/TextAppearance.MaterialComponents.Headline3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:text="@string/welcome"
                        android:textColor="@color/primaryColor" />

                    <TextView
                        android:id="@+id/textView3"
                        style="@style/TextAppearance.MaterialComponents.Headline5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:text="@string/insert_personal_data"
                        android:textColor="@color/secondaryColor" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/personalDataCardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titleCardView">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/primaryLightColor"
                    android:padding="8dp">

                    <TextView
                        android:id="@+id/textView7"
                        style="@style/TextAppearance.MaterialComponents.Headline6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginEnd="32dp"
                        android:layout_marginRight="32dp"
                        android:text="@string/age"
                        app:layout_constraintEnd_toStartOf="@+id/textView8"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView8"
                        style="@style/TextAppearance.MaterialComponents.Headline6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="32dp"
                        android:layout_marginLeft="32dp"
                        android:text="@string/gender"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/textView7"
                        app:layout_constraintTop_toTopOf="parent" />

                    <NumberPicker
                        android:id="@+id/numberPickerAge"
                        android:layout_width="wrap_content"
                        android:layout_height="128dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="32dp"
                        android:layout_marginRight="32dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/genderRadioGroup"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView7" />

                    <RadioGroup
                        android:id="@+id/genderRadioGroup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginLeft="32dp"
                        android:layout_marginTop="8dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/numberPickerAge"
                        app:layout_constraintTop_toBottomOf="@+id/textView8">

                        <RadioButton
                            android:id="@+id/maleRadioButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/male" />

                        <RadioButton
                            android:id="@+id/femaleRadioButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/female" />
                    </RadioGroup>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/measureCardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/personalDataCardView">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/primaryLightColor"
                    android:padding="8dp">

                    <TextView
                        android:id="@+id/textView4"
                        style="@style/TextAppearance.MaterialComponents.Headline6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="32dp"
                        android:layout_marginRight="32dp"
                        android:text="@string/height_cm"
                        app:layout_constraintEnd_toStartOf="@+id/textView5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView5"
                        style="@style/TextAppearance.MaterialComponents.Headline6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginLeft="32dp"
                        android:text="@string/weight_kg"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/textView4"
                        app:layout_constraintTop_toTopOf="parent" />

                    <NumberPicker
                        android:id="@+id/numberPickerWeight"
                        android:layout_width="0dp"
                        android:layout_height="128dp"
                        android:layout_marginStart="32dp"
                        android:layout_marginLeft="32dp"
                        android:ems="10"
                        android:inputType="number"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/numberPickerHeight"
                        app:layout_constraintTop_toBottomOf="@+id/textView5" />

                    <NumberPicker
                        android:id="@+id/numberPickerHeight"
                        android:layout_width="0dp"
                        android:layout_height="128dp"
                        android:layout_marginEnd="32dp"
                        android:layout_marginRight="32dp"
                        android:ems="10"
                        android:inputType="number"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/numberPickerWeight"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView4" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/activityCardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/measureCardView">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/primaryLightColor"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <TextView
                        android:id="@+id/textView6"
                        style="@style/TextAppearance.MaterialComponents.Headline6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/activity_level" />

                        <RadioGroup
                            android:id="@+id/activityRadioGroup"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:orientation="horizontal">

                            <RadioButton
                                android:id="@+id/highRadioButton"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginLeft="16dp"
                                android:layout_marginRight="32dp"
                                android:text="@string/high"
                                android:layout_marginStart="16dp"
                                android:layout_marginEnd="32dp" />

                            <RadioButton
                                android:id="@+id/midRadioButton"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginLeft="32dp"
                                android:layout_marginRight="32dp"
                                android:text="@string/mid" />

                            <RadioButton
                                android:id="@+id/lowRadioButton"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/low"
                                android:layout_gravity="center"
                                android:layout_marginLeft="32dp"
                                android:layout_marginRight="16dp"
                                android:layout_marginStart="32dp"
                                android:layout_marginEnd="16dp" />
                        </RadioGroup>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/nextPageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/next"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</ScrollView>