<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/mainLinearLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/name"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="128dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/modifyQuantity"
                    style="@style/TextAppearance.MdcTypographyStyles.Headline5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/quantity"
                    android:textColor="?attr/colorPrimary" />

                <NumberPicker
                    android:id="@+id/quantityNumberPicker"
                    style="@style/AppTheme.Picker"
                    android:layout_width="match_parent"
                    android:layout_height="128dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="128dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/chooseMeal"
                    style="@style/TextAppearance.MdcTypographyStyles.Headline5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/meal"
                    android:textColor="?attr/colorPrimary" />

                <NumberPicker
                    android:id="@+id/mealNumberPicker"
                    style="@style/AppTheme.Picker"
                    android:layout_width="match_parent"
                    android:layout_height="128dp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/modifyCarbs"
                style="@style/TextAppearance.MdcTypographyStyles.Headline5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/carbs_percent"
                android:textColor="?attr/colorPrimary" />

            <NumberPicker
                android:id="@+id/carbsNumberPicker"
                style="@style/AppTheme.Picker"
                android:layout_width="match_parent"
                android:layout_height="100dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/modifyProteins"
                style="@style/TextAppearance.MdcTypographyStyles.Headline5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/pro_percent"
                android:textColor="?attr/colorPrimary" />

            <NumberPicker
                android:id="@+id/proteinsNumberPicker"
                style="@style/AppTheme.Picker"
                android:layout_width="match_parent"
                android:layout_height="100dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/modifyFats"
                style="@style/TextAppearance.MdcTypographyStyles.Headline5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/fats_percent"
                android:textColor="?attr/colorPrimary" />

            <NumberPicker
                android:id="@+id/fatsNumberPicker"
                style="@style/AppTheme.Picker"
                android:layout_width="match_parent"
                android:layout_height="100dp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>